--- a/flaskinventory/templates/add/newentry.html
+++ b/flaskinventory/templates/add/newentry.html
@@ -10,8 +10,8 @@
             <p>Please quickly read through our <a class="fw-bold" href="{{ url_for('main.guides_newssource') }}" target="_blank">detailed guide for adding entries</a> to the inventory.</p>
             <p>Quick Tips</p>
             <ul>
-                <li>The <i class="fas fa-info-circle mx-1"></i> icon next to the questions give you additional information and explanations</li>
-                <li>The <i class="fas fa-book mx-1"></i> icons give you ideas on how to retrieve some specific information</li>
+                <li>The <i class="fas fa-info-circle mx-1"></i> icons next to the questions give you additional information and explanations.</li>
+                <li>The <i class="fas fa-book mx-1"></i> icons give you ideas on how to retrieve some specific information.</li>
             </ul>
     </div>
 </div>
@@ -24,7 +24,7 @@
                 <div class="col-md-5">
                     {{ form.name.label(class="form-label") }}
                     <div class="invalid-feedback">
-                        Enter a name
+                        Enter the name of new the entity
                     </div>
                     {{ form.name(class="form-control form-control-lg") }}
                 </div>
