#12 removed dropdown arrow from dynamically loaded menues

--- a/flaskinventory/static/css/main.css
+++ b/flaskinventory/static/css/main.css
@@ -107,3 +107,7 @@ dt {
     max-width: 350px!important;
     text-align: left!important;
 }
+
+.ts-no-arrow {
+    background-image: none!important;
+}
