--- a/flaskinventory/templates/add/newsource.html
+++ b/flaskinventory/templates/add/newsource.html
@@ -422,11 +422,11 @@
             <p><small id="publishes_org-helptext" class="mb-3">e.g. The print newspaper The Guardian is owned by Guardian Media Group. To identify this information please check the imprint (or imprint alike information)</small></p>
             <div class="input-group my-3">
                 <span class="input-group-text">Organisation {{ make_tooltip('Add the name(s) of organisations/companies that hold shares of a news source. Please name the next larger unit. ') }}</span>
-                <select name="publishes_org" id="publishes_org" class="form-select form-select-lg" placeholder="Select multiple or add new..." multiple aria-describedby="published-by-feedback" ></select>
+                <select name="publishes_org" id="publishes_org" class="form-select form-select-lg ts-no-arrow" placeholder="Type to search existing organisations or add new ones..." multiple aria-describedby="published-by-feedback" ></select>
             </div>
             <div class="input-group">
                 <span class="input-group-text">Person {{ make_tooltip('If applicable, add names of people who hold shares in a news source. This field specified individual persons who own the news source or parts of it. It is not there to include chairmen or chairwomen of a company, also not to mention the publisher’s/editor’s names.') }}</span>
-                <select name="publishes_person" id="publishes_person" class="form-select form-select-lg" placeholder="Select multiple or add new..." multiple aria-describedby="published-by-feedback" ></select>
+                <select name="publishes_person" id="publishes_person" class="form-select form-select-lg ts-no-arrow" placeholder="Type to search existing persons or add new ones..." multiple aria-describedby="published-by-feedback" ></select>
             </div>
             <div id="published-by-feedback"></div>
         </div>
