#10 adjusted detail view for vk.com

--- a/flaskinventory/templates/view/elements/detail_source.html
+++ b/flaskinventory/templates/view/elements/detail_source.html
@@ -41,6 +41,9 @@
                 {% elif entry.channel.unique_name == 'facebook' %}
                 <a class="" target="_blank" href="https://facebook.com/{{ entry.channel_url }}">
                 https://facebook.com/{{ entry.channel_url }}
+                {% elif entry.channel.unique_name == 'vkontakte' %}
+                <a class="" target="_blank" href="https://vk.com/{{ entry.channel_url }}">
+                https://vk.com/{{ entry.channel_url }}
                 {% endif %}
                 <i class="fas fa-external-link-alt mx-2" alt="External Link"></i></a>
                 </dd>
