--- a/flaskinventory/templates/review/detail.html
+++ b/flaskinventory/templates/review/detail.html
@@ -1,16 +1,15 @@
 {% extends "layout.html" %} {% block content %}
 <article>
 
-<div class="row justify-content-between mb-4">
-    <div class='col-4'>
+<div class="col d-flex align-items-start mb-4">
+    <div class="w-100">
         <h1>Review Mode</h1>
     </div>
-    <div class="col-4">
+    <div>
         <form method="POST" action="{{ url_for('review.submit') }}">
             {{ review_actions.hidden_tag() }}
             <div class="btn-group" role="group" aria-label="Review Actions">
                 {{ review_actions.reject(class="btn btn-danger") }}
-                {{ review_actions.edit(class="btn btn-warning") }}
                 {{ review_actions.accept(class="btn btn-success") }}
             </div>
             
