--- a/flaskinventory/templates/view/elements/detail_source.html
+++ b/flaskinventory/templates/view/elements/detail_source.html
@@ -2,7 +2,7 @@
     <div class="icon-square me-3">
         <h2><i class="icon-{{ entry.channel.unique_name }} color-{{ entry.channel.unique_name }}" alt="{{ entry.channel.name }}"></i></h2>
     </div>
-    <div>
+    <div class="w-100">
         <h2>{% if entry.channel.unique_name in ['twitter', 'instagram'] %}@{% endif %}{{ entry.name }} 
             {% if entry.verified_account %} 
             <span class="fa-stack text-primary align-middle" style="font-size: 0.3em;">
@@ -12,6 +12,11 @@
             {% endif %}
             <small class="fs-6 mx-4 text-muted">({{ entry.uid }})</small>
         </h2>
+    </div>
+    <div>
+    {% if current_user.user_role > 1 %}
+        <a class="btn btn-primary" href="{{ url_for('edit.source', uid=entry.uid) }}">Edit</a>
+    {% endif %}
     </div>
 </div>
 
