--- a/flaskinventory/templates/edit/_formhelpers.html
+++ b/flaskinventory/templates/edit/_formhelpers.html
@@ -12,7 +12,7 @@
     {% else %} 
         {% if field.type == 'BooleanField' %}
             {{ field(class="form-check") }} 
-        {% elif field.type == 'SelectField' %}
+        {% elif field.type == 'SelectField' or field.type == 'SelectMultipleField' %}
             {{ field(class="form-select form-select-lg") }} 
         {% else %}
             {{ field(class="form-control form-control-lg") }} 
