Divorce JavaScript from HTML #2

--- a/flaskinventory/templates/layout.html
+++ b/flaskinventory/templates/layout.html
@@ -17,12 +17,10 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main.css') }}">
     
-    <!-- AJAX -->
+    <!-- JQUERY -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
     <!-- Typeahead -->
-    <!-- <script src="{{ url_for('static',  filename='/js/bloodhound.min.js') }}"></script> -->
-    <!-- <script src="{{ url_for('static',  filename='/js/typeahead.bundle.min.js') }}"></script> -->
     <script src="{{ url_for('static', filename='js/jquery.typeahead.js') }}"></script>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='js/jquery.typeahead_edited.css') }}">
 
