#18 improving summary screen

--- a/flaskinventory/templates/add/newsource.html
+++ b/flaskinventory/templates/add/newsource.html
@@ -562,9 +562,282 @@
 
 
     <fieldset id="section-final" hidden>
-        <h3>Summary</h3>
+        <h3 class="mb-5">Summary</h3>
 
         <div id='summary-container'>
+            <div id='summary-channel' hidden>
+                <h6 class="text-muted mb-1">
+                    Through which channel is the news source distributed?
+                </h6>
+                <h4 class="mb-4">
+                    Value
+                </h4>
+            </div>
+            <div id='summary-name' hidden>
+                <h6 class="text-muted mb-1">
+                    What is the name of the news source?
+                </h6>
+                <h4 class="mb-4">
+                    Value
+                </h4>
+            </div>
+            <div id='summary-channel_url' hidden>
+                <h6 class="text-muted mb-1">
+                    What is the url of the website that provides tv, radio, or podcast scripts?
+                </h6>
+                <h4 class="mb-4">
+                    Value
+                </h4>
+            </div>
+            <div id='summary-other_names' hidden>
+                <h6 class="text-muted mb-1">
+                    Is the news source known by alternative names?
+                </h6>
+                <h4 class="mb-4">
+                    Value
+                </h4>
+            </div>
+            <div id='summary-channel_comments' hidden>
+                <h6 class="text-muted mb-1">
+                    Does the online news source have user comments below individual news articles?
+                </h6>
+                <h4 class="mb-4">
+                    Value
+                </h4>
+            </div>
+            <div id='summary-founded' hidden>
+                <h6 class="text-muted mb-1">
+                    What year was the news source founded?
+                </h6>
+                <h4 class="mb-4">
+                    Value
+                </h4>
+            </div>
+            <div id='summary-publication_kind' hidden>
+                <h6 class="text-muted mb-1">
+                    What label or labels describe the main source?
+                </h6>
+                <h4 class="mb-4">
+                    Value
+                </h4>
+            </div>
+            <div id='summary-special_interest' hidden>
+                <h6 class="text-muted mb-1">
+                    Does the news source have one main topical focus? 
+                </h6>
+                <h4 class="mb-4">
+                    Value
+                </h4>
+            </div>
+            <div id='summary-topical_focus' hidden>
+                <h6 class="text-muted mb-1">
+                    What is the main topical focus of the news source? 
+                </h6>
+                <h4 class="mb-4">
+                    Value
+                </h4>
+            </div>
+            <div id='summary-publication_cycle' hidden>
+                <h6 class="text-muted mb-1">
+                    What is the publication cycle of the source?
+                </h6>
+                <h4 class="mb-1">
+                    Value
+                </h4>
+            </div>
+            <div id='summary-publication_cycle_weekday_1' hidden>
+                <h6 class="text-muted mb-1">
+                    Monday
+                </h6>
+                <h4 class="mb-1">
+                    Value
+                </h4>
+            </div>
+            <div id='summary-publication_cycle_weekday_2' hidden>
+                <h6 class="text-muted mb-1">
+                    Tuesday
+                </h6>
+                <h4 class="mb-1">
+                    Value
+                </h4>
+            </div>
+            <div id='summary-publication_cycle_weekday_3' hidden>
+                <h6 class="text-muted mb-1">
+                    Wednesday
+                </h6>
+                <h4 class="mb-1">
+                    Value
+                </h4>
+            </div>
+            <div id='summary-publication_cycle_weekday_4' hidden>
+                <h6 class="text-muted mb-1">
+                    Thursday
+                </h6>
+                <h4 class="mb-1">
+                    Value
+                </h4>
+            </div>
+            <div id='summary-publication_cycle_weekday_5' hidden>
+                <h6 class="text-muted mb-1">
+                    Friday
+                </h6>
+                <h4 class="mb-1">
+                    Value
+                </h4>
+            </div>
+            <div id='summary-publication_cycle_weekday_6' hidden>
+                <h6 class="text-muted mb-1">
+                    Saturday
+                </h6>
+                <h4 class="mb-1">
+                    Value
+                </h4>
+            </div>
+            <div id='summary-publication_cycle_weekday_7' hidden>
+                <h6 class="text-muted mb-1">
+                    Sunday
+                </h6>
+                <h4 class="mb-1">
+                    Value
+                </h4>
+            </div>
+            <div class="mb-3"></div>
+            <div id='summary-geographic_scope' hidden>
+                <h6 class="text-muted mb-1">
+                    What is the geographic scope of the news source?
+                </h6>
+                <h4 class="mb-4">
+                    Value
+                </h4>
+            </div>
+            <div id='summary-geographic_scope_multiple' hidden>
+                <h6 class="text-muted mb-1">
+                    What is the multinational scope?
+                </h6>
+                <h4 class="mb-4">
+                    Value
+                </h4>
+            </div>
+            <div id='summary-geographic_scope_subunit' hidden>
+                <h6 class="text-muted mb-1">
+                    What is the subnational scope?
+                </h6>
+                <h4 class="mb-4">
+                    Value
+                </h4>
+            </div>
+            <div id='summary-geographic_scope_single' hidden>
+                <h6 class="text-muted mb-1">
+                    What is the national scope?
+                </h6>
+                <h4 class="mb-4">
+                    Value
+                </h4>
+            </div>
+            <div id='summary-languages' hidden>
+                <h6 class="text-muted mb-1">
+                    In which language(s) does the news source publish its news texts? 
+                </h6>
+                <h4 class="mb-4">
+                    Value
+                </h4>
+            </div>
+            <div id='summary-payment_model' hidden>
+                <h6 class="text-muted mb-1">
+                    Is the content produced by the news source accessible free of charge?
+                </h6>
+                <h4 class="mb-4">
+                    Value
+                </h4>
+            </div>
+            <div id='summary-contains_ads' hidden>
+                <h6 class="text-muted mb-1">
+                    Does the news source contain advertisements?
+                </h6>
+                <h4 class="mb-4">
+                    Value
+                </h4>
+            </div>
+            <div id='summary-publishes_org' hidden>
+                <h6 class="text-muted mb-1">
+                    Which organisation owns the news source?
+                </h6>
+                <h4 class="mb-4">
+                    Value
+                </h4>
+            </div>
+            <div id='summary-publishes_person' hidden>
+                <h6 class="text-muted mb-1">
+                    Which Person owns the news source?
+                </h6>
+                <h4 class="mb-4">
+                    Value
+                </h4>
+            </div>
+            <div id='summary-audience_size_subscribers' hidden>
+                <h6 class="text-muted mb-1">
+                    How many copies of this newspaper are sold per issue? 
+                </h6>
+                <h4 class="mb-4">
+                    Value
+                </h4>
+            </div>
+            <div id='summary-audience_size_year' hidden>
+                <h6 class="text-muted mb-1">
+                    For which year is this number?
+                </h6>
+                <h4 class="mb-4">
+                    Value
+                </h4>
+            </div>
+            <div id='summary-audience_size_datafrom' hidden>
+                <h6 class="text-muted mb-1">
+                    Where did you get this number from?
+                </h6>
+                <h4 class="mb-4">
+                    Value
+                </h4>
+            </div>
+            <div id='summary-channel_epaper' hidden>
+                <h6 class="text-muted mb-1">
+                    Does the print news source have an e-paper version?
+                </h6>
+                <h4 class="mb-4">
+                    Value
+                </h4>
+            </div>
+            <div id='summary-archive_sources_included' hidden>
+                <h6 class="text-muted mb-1">
+                    Are texts from the news source available for download in one or several of the following data archives?
+                </h6>
+                <h4 class="mb-4">
+                    Value
+                </h4>
+            </div>
+            <div id='summary-dataset_sources_included' hidden>
+                <h6 class="text-muted mb-1">
+                    Is the news source included in one or several annoted media text data sets?
+                </h6>
+                <h4 class="mb-4">
+                    Value
+                </h4>
+            </div>
+            <div id='summary-entry_notes' hidden>
+                <h6 class="text-muted mb-1">
+                    Do you have any other notes on the source that you just coded?
+                </h6>
+                <h4 class="mb-4">
+                    Value
+                </h4>
+            </div>
+            <div id='summary-related_sources' hidden>
+                <h6 class="text-muted mb-1">
+                    For the source that you just coded, does it have other closely related sources?
+                </h6>
+                <h4 class="mb-4">
+                    Value
+                </h4>
+            </div>
         </div>
 
         <input type="button" class="btn btn-primary prev" value="Previous Step">
